Bug 858014, make sure nsPIDOMWindow can be used in external apps, like TB/SM, r=neil

--HG--
extra : rebase_source : 5c3bfc5bb175efba465be834974d26df34207568